--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,10 +5,151 @@ permalink: /portfolio/
 author_profile: true
 ---
 
+<style>
+.page__share {
+  display: none !important;
+}
+
+.portfolio-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 20px;
+  margin: 40px 0;
+  padding: 0;
+}
+
+.portfolio-item {
+  position: relative;
+  aspect-ratio: 4 / 3;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.portfolio-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+}
+
+.portfolio-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+.portfolio-item:hover .portfolio-image {
+  transform: scale(1.05);
+}
+
+.portfolio-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.6) 50%, transparent 100%);
+  padding: 30px 20px 20px 20px;
+  transition: all 0.3s ease;
+}
+
+.portfolio-item:hover .portfolio-overlay {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0.4) 100%);
+  padding: 40px 20px 20px 20px;
+}
+
+.portfolio-title {
+  color: #fff;
+  font-size: 1.4em;
+  font-weight: 600;
+  margin: 0;
+  text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+  line-height: 1.3;
+}
+
+.portfolio-excerpt {
+  color: #fff;
+  font-size: 0.9em;
+  margin: 10px 0 0 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all 0.3s ease;
+  line-height: 1.4;
+}
+
+.portfolio-item:hover .portfolio-excerpt {
+  opacity: 0.95;
+  transform: translateY(0);
+}
+
+.portfolio-date {
+  color: #fff;
+  font-size: 0.85em;
+  margin-top: 8px;
+  opacity: 0.8;
+  font-style: italic;
+  display: block;
+}
+
+/* Dark mode compatibility */
+html.dark .portfolio-item,
+body.dark .portfolio-item,
+.greedy-nav--dark .portfolio-item {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+html.dark .portfolio-item:hover,
+body.dark .portfolio-item:hover,
+.greedy-nav--dark .portfolio-item:hover {
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  .portfolio-grid {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
+@media (max-width: 768px) {
+  .portfolio-grid {
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+  
+  .portfolio-item {
+    border-radius: 15px;
+  }
+  
+  .portfolio-title {
+    font-size: 1.2em;
+  }
+}
+</style>
+
 {% include base_path %}
 
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
-
+<div class="portfolio-grid">
+  {% for post in site.portfolio %}
+    <a href="{{ post.url | relative_url }}" class="portfolio-item">
+      {% if post.header.teaser %}
+        <img src="{{ post.header.teaser | relative_url }}" alt="{{ post.title }}" class="portfolio-image">
+      {% elsif post.image %}
+        <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" class="portfolio-image">
+      {% else %}
+        <div class="portfolio-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+      {% endif %}
+      
+      <div class="portfolio-overlay">
+        <h2 class="portfolio-title">{{ post.title }}</h2>
+        <p class="portfolio-excerpt">{{ post.excerpt | strip_html | truncatewords: 20 }}</p>
+        {% if post.date %}
+          <span class="portfolio-date">{{ post.date | date: "%B %Y" }}</span>
+        {% endif %}
+      </div>
+    </a>
+  {% endfor %}
+</div>
