--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -38,7 +38,8 @@ author_profile: true
 .portfolio-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  background: #f5f5f5;
   transition: all 0.5s ease;
 }
 
