--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -10,17 +10,18 @@ author_profile: true
   display: none !important;
 }
 
-.portfolio-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  gap: 20px;
+.portfolio-masonry {
+  column-count: 3;
+  column-gap: 20px;
   margin: 40px 0;
   padding: 0;
 }
 
 .portfolio-item {
-  position: relative;
-  aspect-ratio: 4 / 3;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 20px;
+  break-inside: avoid;
   border-radius: 20px;
   overflow: hidden;
   cursor: pointer;
@@ -31,6 +32,7 @@ author_profile: true
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
   text-decoration: none;
+  position: relative;
 }
 
 .portfolio-item:hover {
@@ -42,9 +44,9 @@ author_profile: true
 
 .portfolio-image {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background: #f5f5f5;
+  height: auto;
+  display: block;
+  background: transparent;
   transition: all 0.5s ease;
 }
 
@@ -59,7 +61,7 @@ author_profile: true
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   display: flex;
@@ -77,7 +79,7 @@ author_profile: true
 
 .portfolio-title {
   color: #fff;
-  font-size: 1.6em;
+  font-size: 1.3em;
   font-weight: 600;
   margin: 0 0 10px 0;
   text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
@@ -87,19 +89,18 @@ author_profile: true
 
 .portfolio-excerpt {
   color: #fff;
-  font-size: 0.95em;
+  font-size: 0.9em;
   margin: 0;
   opacity: 0.95;
-  line-height: 1.5;
+  line-height: 1.4;
   text-align: center;
-  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
 }
 
 .portfolio-date {
   color: #fff;
   font-size: 0.85em;
-  margin-top: 10px;
-  opacity: 0.9;
+  margin-top: 8px;
+  opacity: 0.8;
   font-style: italic;
   display: block;
   text-align: center;
@@ -109,51 +110,37 @@ author_profile: true
 html.dark .portfolio-item,
 body.dark .portfolio-item,
 .greedy-nav--dark .portfolio-item {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.03);
+  border: 1px solid rgba(255, 255, 255, 0.08);
 }
 
 html.dark .portfolio-item:hover,
 body.dark .portfolio-item:hover,
 .greedy-nav--dark .portfolio-item:hover {
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
-}
-
-html.dark .portfolio-overlay,
-body.dark .portfolio-overlay,
-.greedy-nav--dark .portfolio-overlay {
-  background: rgba(0, 0, 0, 0.7);
+  border: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 /* Responsive adjustments */
 @media (max-width: 1200px) {
-  .portfolio-grid {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  .portfolio-masonry {
+    column-count: 2;
   }
 }
 
 @media (max-width: 768px) {
-  .portfolio-grid {
-    grid-template-columns: 1fr;
-    gap: 15px;
+  .portfolio-masonry {
+    column-count: 1;
   }
   
   .portfolio-item {
     border-radius: 15px;
-  }
-  
-  .portfolio-title {
-    font-size: 1.3em;
-  }
-  
-  .portfolio-excerpt {
-    font-size: 0.9em;
   }
 }
 </style>
 
 {% include base_path %}
 
-<div class="portfolio-grid">
+<div class="portfolio-masonry">
   {% for post in site.portfolio %}
     <a href="{{ post.url | relative_url }}" class="portfolio-item">
       {% if post.header.teaser %}
@@ -161,7 +148,7 @@ body.dark .portfolio-overlay,
       {% elsif post.image %}
         <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" class="portfolio-image">
       {% else %}
-        <div class="portfolio-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+        <div class="portfolio-image" style="height: 300px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
       {% endif %}
       
       <div class="portfolio-overlay">
